Do some editing of package and filter UI strings (#569039).

--- a/ui/create-storage.glade
+++ b/ui/create-storage.glade
@@ -132,7 +132,7 @@
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
                     <property name="xpad">20</property>
-                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Create a RAID formated partition&lt;/span&gt;</property>
+                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Create a RAID formatted partition&lt;/span&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -167,7 +167,7 @@
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
                     <property name="xpad">20</property>
-                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Requires at least 2 free RAID formated partitions&lt;/span&gt;</property>
+                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Requires at least 2 free RAID formatted partitions&lt;/span&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -273,7 +273,7 @@
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
                     <property name="xpad">20</property>
-                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Requires at least 1 free LVM formated partition&lt;/span&gt;</property>
+                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Requires at least 1 free LVM formatted partition&lt;/span&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -354,7 +354,7 @@
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
                     <property name="xpad">20</property>
-                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Create an LVM formated partition&lt;/span&gt;</property>
+                    <property name="label" translatable="yes">&lt;span size="small" color="gray"&gt;Create an LVM formatted partition&lt;/span&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
