--- a/ui/filter.glade
+++ b/ui/filter.glade
@@ -29,7 +29,7 @@
 	<widget class="GtkLabel" id="label1">
 	  <property name="width_request">600</property>
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Please select the drives you'd like to install the operating system on, as well as any drives you'd like to automatically mount to your system, below:</property>
+	  <property name="label" translatable="yes">Please select the drives you'd like to install the operating system on, as well as any drives you'd like to automatically mount on your system:</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1396,7 +1396,7 @@ Target Identifier</property>
 	    <widget class="GtkLabel" id="label3">
 	      <property name="width_request">600</property>
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">&lt;b&gt;Tip:&lt;/b&gt; Selecting a drive on this screen does not necessarily mean it will be wiped by the installation process.  Also, note that post-installation you may mount drives you did not select here by modifying your /etc/fstab file.</property>
+	      <property name="label" translatable="yes">&lt;b&gt;Tip:&lt;/b&gt; Selecting a drive on this screen does not necessarily mean it will be formatted by the installation process.  Also, note that post-installation you may mount drives you did not select here by modifying your /etc/fstab file.</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
