Translate the Back button in glade (#576894)

--- a/ui/anaconda.glade
+++ b/ui/anaconda.glade
@@ -237,7 +237,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="label8">
 			      <property name="visible">True</property>
-			      <property name="label">_Back</property>
+			      <property name="label" translatable="yes">_Back</property>
 			      <property name="use_underline">True</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
