--- a/ui/account.glade
+++ b/ui/account.glade
@@ -5,7 +5,7 @@
 
 <widget class="GtkWindow" id="account_window">
   <property name="border_width">18</property>
-  <property name="title" translatable="yes" context="yes"></property>
+  <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
