--- a/ui/cleardisks.glade
+++ b/ui/cleardisks.glade
@@ -6,7 +6,7 @@
 <widget class="GtkWindow" id="cleardisksWindow">
   <property name="border_width">6</property>
   <property name="width_request">600</property>
-  <property name="title" translatable="yes" context="yes"></property>
+  <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
