Add iSCSI radio button to button group (#603726)
The iSCSI, FCoE, and zFCP radio buttons all need to be part of the same
radio button group for set_active() to work correctly.

--- a/data/ui/adddrive.glade
+++ b/data/ui/adddrive.glade
@@ -129,6 +129,7 @@
 		  <property name="active">False</property>
 		  <property name="inconsistent">False</property>
 		  <property name="draw_indicator">True</property>
+		  <property name="group">iscsiRadio</property>
 		  <signal name="group-changed" handler="on_radio_changed"/>
 		</widget>
 		<packing>
