--- a/ui/create-storage.glade
+++ b/ui/create-storage.glade
@@ -354,11 +354,12 @@
             </child>
             <child>
               <widget class="GtkButton" id="storage_create_button_create">
-                <property name="label" translatable="yes">Create</property>
+                <property name="label" translatable="yes">C_reate</property>
                 <property name="response_id">1</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_underline">True</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
