ui: a couple of storage mnemonics.
So one can speed through the filtering UI real quick.

--- a/data/ui/filter.glade
+++ b/data/ui/filter.glade
@@ -1274,7 +1274,7 @@ Target Identifier</property>
 	      <child>
 		<widget class="GtkLabel" id="label9">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Add Advanced Target</property>
+		  <property name="label" translatable="yes">_Add Advanced Target</property>
 		  <property name="use_underline">True</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
