iscsi, cosmetic: fix grammar in the iscsi dialogs.

--- a/data/ui/iscsi-dialogs.glade
+++ b/data/ui/iscsi-dialogs.glade
@@ -85,7 +85,7 @@
         <child>
           <widget class="GtkLabel" id="label1">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">What kind of iSCSI &lt;b&gt;discovery authentication&lt;/b&gt; you wish to perform:</property>
+            <property name="label" translatable="yes">What kind of iSCSI &lt;b&gt;discovery authentication&lt;/b&gt; do you wish to perform:</property>
             <property name="use_markup">True</property>
           </widget>
           <packing>
@@ -353,7 +353,7 @@
         <child>
           <widget class="GtkLabel" id="label5">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">What kind of iSCSI &lt;b&gt;login authentication&lt;/b&gt; you wish to perform:</property>
+            <property name="label" translatable="yes">What kind of iSCSI &lt;b&gt;login authentication&lt;/b&gt; do you wish to perform:</property>
             <property name="use_markup">True</property>
           </widget>
           <packing>
