--- a/ui/anaconda.glade
+++ b/ui/anaconda.glade
@@ -6,8 +6,8 @@
     <property name="resizable">False</property>
     <property name="window_position">center</property>
     <property name="gravity">center</property>
-    <signal name="key_release_event" handler="on_mainWindow_key_release_event" swapped="no"/>
-    <signal name="delete_event" handler="on_mainWindow_delete_event" swapped="no"/>
+    <signal name="key_release_event" handler="on_mainWindow_key_release_event"/>
+    <signal name="delete_event" handler="on_mainWindow_delete_event"/>
     <child>
       <widget class="GtkVBox" id="mainBox">
         <property name="visible">True</property>
@@ -52,7 +52,7 @@
               <widget class="GtkButton" id="debugButton">
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <signal name="clicked" handler="on_debugButton_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_debugButton_clicked"/>
                 <child>
                   <widget class="GtkAlignment" id="alignment4">
                     <property name="visible">True</property>
@@ -107,7 +107,7 @@
                     <property name="can_focus">True</property>
                     <property name="can_default">True</property>
                     <property name="receives_default">False</property>
-                    <signal name="clicked" handler="on_backButton_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_backButton_clicked"/>
                     <child>
                       <widget class="GtkAlignment" id="alignment9">
                         <property name="visible">True</property>
@@ -157,7 +157,7 @@
                     <property name="can_focus">True</property>
                     <property name="can_default">True</property>
                     <property name="receives_default">False</property>
-                    <signal name="clicked" handler="on_nextButton_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_nextButton_clicked"/>
                     <child>
                       <widget class="GtkAlignment" id="alignment7">
                         <property name="visible">True</property>
@@ -206,7 +206,7 @@
                     <property name="can_focus">True</property>
                     <property name="can_default">True</property>
                     <property name="receives_default">False</property>
-                    <signal name="clicked" handler="on_rebootButton_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_rebootButton_clicked"/>
                     <child>
                       <widget class="GtkAlignment" id="alignment8">
                         <property name="visible">True</property>
@@ -257,7 +257,7 @@
                     <property name="can_default">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_closeButton_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_closeButton_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
