--- a/data/ui/anaconda.glade
+++ b/data/ui/anaconda.glade
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.6 -->
   <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkWindow" id="mainWindow">
     <property name="resizable">False</property>
     <property name="window_position">center</property>
+    <property name="default_width">800</property>
+    <property name="default_height">600</property>
     <property name="gravity">center</property>
     <signal name="key_release_event" handler="on_mainWindow_key_release_event"/>
     <signal name="delete_event" handler="on_mainWindow_delete_event"/>
