--- a/data/ui/reinitialize-dialog.glade
+++ b/data/ui/reinitialize-dialog.glade
@@ -220,7 +220,7 @@ Are you sure this device does not contain valuable data?</property>
 		  <property name="visible">True</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Apply my choice to all devices with undetected partitions or filesystems</property>
+		  <property name="label" translatable="yes">Apply my choice to all devices with undetected partitions or filesystems.</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
