iscsi: disable the 'Login' button with no nodes selected.
Resolves: rhbz#700085

--- a/data/ui/iscsi-dialogs.glade
+++ b/data/ui/iscsi-dialogs.glade
@@ -311,7 +311,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="button3">
+              <widget class="GtkButton" id="button_login">
                 <property name="label" translatable="yes">_Login</property>
                 <property name="response_id">1</property>
                 <property name="visible">True</property>
