--- a/ui/iscsi-dialogs.glade
+++ b/ui/iscsi-dialogs.glade
@@ -311,7 +311,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="button3">
+              <widget class="GtkButton" id="button_login">
                 <property name="label" translatable="yes">_Login</property>
                 <property name="response_id">1</property>
                 <property name="visible">True</property>
