--- a/data/ui/network.glade
+++ b/data/ui/network.glade
@@ -235,7 +235,7 @@
 		      <property name="visible">True</property>
 		      <property name="can_default">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">Configure Network</property>
+		      <property name="label" translatable="yes">_Configure Network</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
