--- a/data/ui/filter.glade
+++ b/data/ui/filter.glade
@@ -1264,6 +1264,18 @@ Target Identifier</property>
 	  <property name="spacing">0</property>
 
 	  <child>
+	    <widget class="GtkButton" id="optionsButton">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label" translatable="yes">_Device Options</property>
+	      <property name="use_underline">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkButton" id="addAdvancedButton">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
