--- a/data/ui/anaconda.glade
+++ b/data/ui/anaconda.glade
@@ -18,6 +18,10 @@
         <child>
           <widget class="GtkImage" id="headerImage">
             <property name="visible">True</property>
+            <property name="xalign">0</property>
+            <property name="yalign">0.5</property>
+            <property name="xpad">10</property>
+            <property name="ypad">0</property>
           </widget>
           <packing>
             <property name="expand">False</property>
