--- a/pyanaconda/ui/gui/spokes/language.ui
+++ b/pyanaconda/ui/gui/spokes/language.ui
@@ -5,7 +5,7 @@
   <object class="GtkImage" id="addImage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-add</property>
+    <property name="icon_name">list-add-symbolic</property>
   </object>
   <object class="GtkDialog" id="addLayoutDialog">
     <property name="can_focus">False</property>
@@ -153,7 +153,7 @@
   <object class="GtkImage" id="downImage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-go-down</property>
+    <property name="icon_name">go-down-symbolic</property>
   </object>
   <object class="AnacondaSpokeWindow" id="languageWindow">
     <property name="startup_id">filler</property>
@@ -442,16 +442,16 @@ any layout to the top of the list to select it as the default.</property>
   <object class="GtkImage" id="removeImage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-remove</property>
+    <property name="icon_name">list-remove-symbolic</property>
   </object>
   <object class="GtkImage" id="settingsImage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="icon_name">applications-system</property>
+    <property name="icon_name">system-run-symbolic</property>
   </object>
   <object class="GtkImage" id="upImage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-go-up</property>
+    <property name="icon_name">go-up-symbolic</property>
   </object>
 </interface>
